src/test/ui/parser/macro-mismatched-delim-brace-paren.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/macro-mismatched-delim-brace-paren.rs:6:5
   |
LL |     foo! {
   |          - unclosed delimiter
LL |         bar, "baz", 1, 2.0
LL |     )
   |     ^ mismatched closing delimiter

error: aborting due to previous error

